<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="amner.android.com.movies.SplashActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:scaleType="center"
        android:background="@drawable/background_movie">
    </ImageView>

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/dp_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/button_rounded"
            android:weightSum="10"
            android:elevation="@dimen/dp_8"
            android:padding="@dimen/dp_8">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:src="@drawable/icon_recommended"
                android:contentDescription="@string/new_movie_icon_activity_splash" />

            <Button
                android:id="@+id/recommended_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/dp_16"
                android:layout_weight="7.5"
                android:background="@color/colorAccent"
                android:text="@string/recommended"
                android:textSize="@dimen/sp_20"
                android:theme="@style/ThemeOverlay.Buttons"
                tools:text="@string/recommended" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/button_rounded"
            android:weightSum="10"
            android:elevation="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_20"
            android:padding="@dimen/dp_8">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:src="@drawable/icon_wish_list"
                android:contentDescription="@string/wish_list_splash_activity_icon" />

            <Button
                android:id="@+id/wish_list_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/dp_16"
                android:layout_weight="7.5"
                android:background="@color/colorAccent"
                android:text="@string/wish_list"
                android:textSize="@dimen/sp_20"
                android:theme="@style/ThemeOverlay.Buttons"
                tools:text="@string/wish_list" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:weightSum="10"
            android:elevation="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_20"
            android:padding="@dimen/dp_8">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:src="@drawable/icon_history"
                android:contentDescription="@string/like_history_icon_splash_activity" />

            <Button
                android:id="@+id/liked_button"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/dp_16"
                android:layout_weight="7.5"
                android:background="@color/colorAccent"
                android:text="@string/like_history"
                android:textSize="@dimen/sp_20"
                android:theme="@style/ThemeOverlay.Buttons"
                tools:text="@string/like_history" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>