<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/widget_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:padding="@dimen/dp_16">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="@dimen/dp_8"
                android:text="@string/widget_wish_list"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorText"
                android:textStyle="bold" />

        </LinearLayout>

        <GridView
            android:id="@+id/widget_grid_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/empty_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_movies_widget"
                android:textColor="@color/colorText"
                android:textSize="@dimen/sp_25"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.2"
                android:contentDescription="@string/image_widget_general" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>