<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_wish_list"
    android:background="@color/colorPrimaryLight"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorPrimaryLight"
    android:layout_margin="@dimen/dp_8"
    android:elevation="@dimen/dp_8"
    android:padding="@dimen/dp_8"
    app:cardCornerRadius="@dimen/dp_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movie_poster_fragment_wish_list"
            android:padding="@dimen/dp_8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_name"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_8"
                tools:text="Movie name" />

            <TextView
                android:id="@+id/movie_year"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_8"
                tools:text="year" />

            <TextView
                android:id="@+id/summary_title"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_8"
                tools:text="@string/title_summary" />

            <TextView
                android:id="@+id/movie_summary"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_8"
                tools:text="@string/summary" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

